--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# model file
+model/
+
+# data file
+data/
+
+# vs code cache
+.vscode
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
